# webrtc-teleop-demo

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.run/: 02_motion_controller.run.xml  02_webrtc_video.run.xml  03_fixed_video_plane.run.xml  main.run.xml  rtc_server.run.xml
main_setup/: main.py
src/vuer_teleop_demo/: __init__.py
src/vuer_teleop_demo/webrtc_video_panels/: 01_stereo_video.py  02_webrtc_video.py  client.js  index.html  rtc_server.py  rtc_server_astribot.py  vuer_webrtc_example.py
src/vuer_teleop_demo/xr_inputs/: 01_hand.py  03_both_hand_and_controllers.py
webrtc_teleop_demo/: 01_stereo_video.py  02_webrtc_video.py  03_fixed_video_plane.py  client.js
webrtc_video_panels/: 02_webrtc_video.py  03_fixed_video_plane.py  client.js  rtc_server.py
xr_inputs/: 02_motion_controller.py  03_both_hand_and_controllers.py
